tests/snapshots/cli__add_follow@mixed_style_blueprint_systems.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/mixed_style.flake.nix"
    - "--diff"
    - add-follow
    - blueprint.systems
    - systems
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -13,6 +13,7 @@

     blueprint = {
       url = "github:numtide/blueprint";
+      inputs.systems.follows = "systems";
     };

     mprisd = {

----- stderr -----
