tests/snapshots/cli__add_follow_existing_same@completely_flat_toplevel_crane_nixpkgs.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/completely_flat_toplevel.flake.nix"
    - "--diff"
    - add-follow
    - crane.nixpkgs
    - nixpkgs
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Already follows: crane.inputs.nixpkgs.follows = "nixpkgs"

----- stderr -----
